# teg-larevancha

./: ChangeLog  MIGRATION_GTK4_PYTHON3.md  Makefile  Makefile.am  Makefile.in  PLAN_MIGRACION_GTK4.md  aclocal.m4  autogen.sh  config.h  config.h.in~  config.status  configure  configure.in  configure.in~  configure~  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
client/: Makefile  Makefile.in  ejer2.c  fichas.c  inputfd.c  tegclient  tegclient_simple  tegclient_simple.c  test_client  test_client.c  test_gtk3  test_gtk3.c  test_gtk4  test_gtk4.c  test_simple  test_simple.c  test_teg_simple  test_teg_simple.c  themes.c  themes.h
client/gui-gnome/: Makefile  Makefile.am  Makefile.in  armies.c  armies.c.backup  armies.h  callbacks.c  callbacks.h  cards.c  cards.c.backup  chatline.c  colors.c  colors.c.backup  colors.h  connect.c  connect.c.backup  dices.c  dices.c.backup  dices.h  g_cont.c  g_cont.c.backup  g_cont.h  g_country.c  g_country.c.backup  g_country.h  g_scores.c  g_scores.c.backup  gnome-compat.h  gnome_compat.c  gnome_compat_impl.c  gtk3_compat.h  gui.c  interface.c  interface.c.backup  interface.h  locate_country.c  locate_country.c.backup  locate_country.h  missing_functions.c  mission.c  (+15 more)
client/gui-gnome/.deps/: armies.Po  callbacks.Po  cards.Po  chatline.Po  colors.Po  connect.Po  dices.Po  g_cont.Po  g_country.Po  g_scores.Po  gnome_compat.Tpo  gui.Po  interface.Po  locate_country.Po  missing_functions.Po  mission.Po  preferences.Po  priv.Po  real_functions.Po  status.Po  stock.Po  stubs.Po  support.Po
client/gui-gnome/stock/: Makefile  Makefile.in
common/: Makefile  Makefile.in  common.c  cont.c  cont.h  country.c  country.h  missions.c  missions.h  tarjeta.c  tarjeta.c.bak  tarjeta.h
debian/: changelog  control  copyright  rules  teg.menu  tegclient.6  tegrobot.6  tegserver.6
docs/: Makefile  Makefile.in
ggz/: Makefile  Makefile.in  teg.dsc  tegclient.dsc
macros/: Makefile  Makefile.am  Makefile.in  python.m4
metaserver/: Makefile  Makefile.in
po/: Makefile  Makefile.in  de.gmo  es.gmo  fr.gmo  gl.gmo  hu_HU.gmo  it.gmo  pl.gmo  pt.gmo  pt_BR.gmo
python/: Makefile  Makefile.am  Makefile.in
python/client/: Makefile.am  gui.py  tegclient.py  ttoolkit.py
python/client/gui/: Makefile.am
robot/: Makefile  Makefile.am  Makefile.in  ai.c  ai.h  (+5 more)
(+53 files in other folders)
