## Process this file with automake to produce Makefile.in

SUBDIRS = gui

python_PYTHON = \
	tegclient.py \
	gui.py \
	theme.py \
	toolbar.py \
	ttoolkit.py \
	version.py \
	controllers.py \
	country.py \
	eventmgr.py \
	events.py \
	font.py \
	connection.py \
	listeners.py \
	map.py \
	model.py

EXTRA_DIST = \
	$(python_PYTHON) 